finised contact form, cleaned up code as best I could, included paragraphs about me

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,6 +42,6 @@
             </div>
         </div>
         <div class = "tealBar"></div>
-        <div class = "copyright">Copyright </div>
+        <div class = "copyright">Copyright &#169; </div>
     </body>        
 </html>
