added a closing comment to about

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 are now very good friends in real life. Our guild is currently top five in the whole server and we could easily be number one if we decided 
                 to devote more time to the game. This is pretty nerdy but I love how this guild came together and I love how the game introduced me to 
                 people I would not have met otherwise (including my girlfriend - long distance!). I probably wouldn't be attending this bootcamp and taking 
-                such huge strides towards my goals if it wasn't for this game. 
+                such huge strides towards my goals if it wasn't for this game. Anyways, Thanks for visiting!
             </p>
         </div>
         <div class = "tealBar"></div>
